tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FocusonWandFociE-AAAAAAAAAAAAAAAAAAAAGQ==__CanYouFeeltheSun-AAAAAAAAAAAAAAAAAAAFdg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1398,
  "prerequisites": [
    1376,
    284,
    1374,
    238
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Wand Focus: Meteorology can be used to start or stop rain at will. The perfect thing for Water Infused Solar Panels!\n\n[note]This focus accepts the following upgrade in the Focal Manipulator:[/note]\n§5Frugal§r: Lowers vis cost to cast by 10% per level",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Can You Feel the Sunshine?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1376,
    284,
    1374,
    238
  ],
  "rewards": [],
  "tasks": []
}
