tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FocusonWandFociE-AAAAAAAAAAAAAAAAAAAAGQ==__DiggyDiggyHole-AAAAAAAAAAAAAAAAAAAFXQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1373,
  "prerequisites": [
    227
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Wand Focus: Excavation emits a green beam of light that will mine blocks of any hardness (except for unbreakable blocks like Bedrock) from a distance.\n\nThis focus is also required to operate the Arcane Bore. Upgrading foci to be used in the Bore with §5Enlarge§r is highly recommended, as it increases the radius by 1 per level.\n\n[note]This focus accepts the following upgrades in the Focal Manipulator:[/note]\n§5Frugal§r: Lowers vis cost to cast by 10% per level\n§5Potency§r: Increases block breaking speed every level\n§5Treasure§r: Acts like vanilla Fortune, but does not apply to GT ores\n§5Enlarge§r (even levels): Breaks an extra adjacent block per level\n§5Dowsing§r (level 3): May drop Thaumcraft Native Ores from ores, but does not apply to GT ores\n§5Silk Touch§r (level 5): Acts like vanilla Silk Touch\n",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Diggy Diggy Hole",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    227
  ],
  "rewards": [],
  "tasks": []
}
